--- a/app/src/main/res/layout/fragment_field1.xml
+++ b/app/src/main/res/layout/fragment_field1.xml
@@ -5,22 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <!-- Add TabLayout above RecyclerView -->
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        app:tabMode="fixed"
-        app:tabGravity="fill" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/field1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:paddingTop="8dp"
-        android:clipToPadding="false"
-        android:overScrollMode="never" />
+        android:clipToPadding="false"/>
 
 </LinearLayout>
