--- a/app/src/main/res/layout/chapter_parent.xml
+++ b/app/src/main/res/layout/chapter_parent.xml
@@ -1,24 +1,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:foregroundTint="@color/white"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/save_button"
         android:padding="16dp"
-        android:background="?attr/selectableItemBackground"
         android:text="Header"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
+
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:visibility="gone">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewChild"
