--- a/app/src/main/res/layout/activity_launching.xml
+++ b/app/src/main/res/layout/activity_launching.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:text="Hello there :)"
+        android:text="@string/hello_there"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Διάλεξε την κατεύθυνση σου"
+        android:text="@string/choose_field"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
                 android:onClick="openMainActivity"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:text="Ανθρωπιστικών, Νομικών και Κοινωνικών Επιστημών"
+                android:text="@string/theoretical_field"
                 android:textAlignment="center"
                 android:textSize="16sp"
                 app:cornerRadius="30dp"
@@ -73,7 +73,7 @@
                 android:onClick="openMainActivity"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:text="Θετικών και Τεχνολογικών Επιστημών"
+                android:text="@string/sciences_field"
                 android:textAlignment="center"
                 android:textSize="16sp"
                 app:cornerRadius="30dp"
@@ -98,7 +98,7 @@
             android:onClick="openMainActivity"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="Επιστημών Υγείας και Ζωής"
+            android:text="@string/healthcare_field"
             android:textAlignment="center"
             android:textSize="16sp"
             app:cornerRadius="30dp"
@@ -117,8 +117,7 @@
             android:onClick="openMainActivity"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
-
-            android:text="Επιστημών Οικονομίας και Πληροφορικής"
+            android:text="@string/economics_field"
             android:textAlignment="center"
             android:textSize="16sp"
             app:cornerRadius="30dp"
