--- a/app/src/main/res/layout/subject.xml
+++ b/app/src/main/res/layout/subject.xml
@@ -14,23 +14,27 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="106dp"
+        android:layout_marginStart="16dp"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_marginStart="16dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/item_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Item Name"
+            android:textSize="16sp"
+            android:padding="16dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/item_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Item Description" />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:scaleY="8" />
+
     </LinearLayout>
 
 </LinearLayout>
