--- a/app/src/main/res/layout/activity_launching.xml
+++ b/app/src/main/res/layout/activity_launching.xml
@@ -11,11 +11,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
         android:text="Hello there :)"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/textView2"
@@ -23,108 +25,133 @@
         android:layout_height="wrap_content"
         android:text="Διάλεξε την κατεύθυνση σου"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <Button
+        android:id="@+id/humanStudiesButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:onClick="openMainActivity"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:text="Ανθρωπιστικών, Νομικών και Κοινωνικών Επιστημών"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintEnd_toStartOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+
+    <Button
+        android:id="@+id/scienceStudiesButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:onClick="openMainActivity"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:text="Θετικών και Τεχνολογικών Επιστημών"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintEnd_toStartOf="@+id/guideline1"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+
+    <Button
+        android:id="@+id/medicalStudiesButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:onClick="openMainActivity"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="Επιστημών Υγείας και Ζωής"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+    <Button
+        android:id="@+id/financialCompSciStudiesButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:onClick="openMainActivity"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:text="Επιστημών Οικονομίας και Πληροφορικής"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toEndOf="@id/guideline1"
+        app:layout_constraintStart_toEndOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/guideline5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="-27dp">
+        app:layout_constraintGuide_percent="0.1"
+        app:layout_constraintStart_toStartOf="parent" />
 
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            tools:layout_editor_absoluteX="0dp">
-
-            <Button
-                android:id="@+id/humanStudiesButton"
-                android:layout_width="160dp"
-                android:layout_height="200dp"
-                android:onClick="openMainActivity"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:text="Ανθρωπιστικών, Νομικών και Κοινωνικών Επιστημών"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                app:cornerRadius="30dp"
-                app:layout_constraintEnd_toStartOf="@+id/scienceStudiesButton"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:layout_width="10dp"
-                android:layout_height="match_parent" />
-
-            <Button
-                android:id="@+id/scienceStudiesButton"
-                android:layout_width="160dp"
-                android:layout_height="200dp"
-                android:onClick="openMainActivity"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:text="Θετικών και Τεχνολογικών Επιστημών"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                app:cornerRadius="30dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.9" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintGuide_percent="0.3"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/medicalStudiesButton"
-            android:layout_width="160dp"
-            android:layout_height="200dp"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8"
+        app:layout_constraintStart_toStartOf="parent" />
 
-            android:onClick="openMainActivity"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="Επιστημών Υγείας και Ζωής"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            app:cornerRadius="30dp"
-            app:layout_constraintEnd_toEndOf="@+id/humanStudiesButton"
-            app:layout_constraintStart_toStartOf="@+id/humanStudiesButton"
-            app:layout_constraintTop_toBottomOf="@+id/humanStudiesButton" />
-
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent" />
-
-        <Button
-            android:id="@+id/financialCompSciStudiesButton"
-            android:layout_width="160dp"
-            android:layout_height="200dp"
-            android:onClick="openMainActivity"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-
-            android:text="Επιστημών Οικονομίας και Πληροφορικής"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            app:cornerRadius="30dp"
-            app:layout_constraintEnd_toEndOf="@+id/scienceStudiesButton"
-            app:layout_constraintStart_toStartOf="@+id/scienceStudiesButton"
-            app:layout_constraintTop_toBottomOf="@+id/scienceStudiesButton" />
-    </LinearLayout>
-    </LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.55"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
