--- a/app/src/main/res/layout/subject.xml
+++ b/app/src/main/res/layout/subject.xml
@@ -7,15 +7,16 @@
 
     <ImageView
         android:id="@+id/item_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="16dp"/>
 <!--    The icon needs to change to an icon of each subject through the java class probably-->
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="106dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -32,8 +33,12 @@
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:scaleY="8" />
+            android:layout_height="25dp"
+
+            android:forceDarkAllowed="true"
+            android:foregroundTint="#8090E8"
+            android:progressDrawable="@drawable/progress_bar"/>
+
 
     </LinearLayout>
 
